[gd_scene load_steps=9 format=3 uid="uid://bonlq5vc8hijl"]

[ext_resource type="Script" uid="uid://disi1vlyegf48" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://b7quwoekjl11o" path="res://assets/Ice_Climber_Logo.webp" id="2_bqqt6"]
[ext_resource type="AudioStream" uid="uid://dg0rkj2ci7dx4" path="res://bgm/01-Main_Title.mp3" id="3_bqqt6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ln24"]
texture = ExtResource("2_bqqt6")

[sub_resource type="LabelSettings" id="LabelSettings_bqqt6"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_wu84c"]
font_size = 50
font_color = Color(0.752941, 0.87451, 1, 1)

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = 211.0
offset_right = 129.0
offset_bottom = 428.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="VBoxContainer"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_focus_color = Color(0.258824, 0.25098, 1, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/normal = SubResource("StyleBoxFlat_wu84c")
text = "INICIAR"

[node name="Level" type="Button" parent="VBoxContainer"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_focus_color = Color(0.258824, 0.25098, 1, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/normal = SubResource("StyleBoxFlat_wu84c")
text = "LEVEL"

[node name="Exit" type="Button" parent="VBoxContainer"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_focus_color = Color(0.258824, 0.25098, 1, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/normal = SubResource("StyleBoxFlat_wu84c")
text = "SAIR"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -869.0
offset_top = 83.0
offset_right = 869.0
offset_bottom = 657.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8ln24")

[node name="MenuBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bqqt6")

[node name="StageSelected" type="Label" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 1104.0
offset_top = 833.0
offset_right = 1180.0
offset_bottom = 884.0
text = "1"
label_settings = SubResource("LabelSettings_bqqt6")
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
layout_mode = 0
offset_left = 1205.0
offset_top = 745.0
offset_right = 1605.0
offset_bottom = 981.0
pivot_offset = Vector2(682, 607)
text = "DEFAULT"
label_settings = SubResource("LabelSettings_wu84c")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
